--- a/track1/script/test.ipynb
+++ b/track1/script/test.ipynb
@@ -968,6 +968,7 @@
    "id": "32cf2715",
    "metadata": {},
    "source": [
+    "# #  타겟 분류(Classifier) + 오차 보정(Regressor) 하이브리드 모델델 \n",
     "네, 이제 성능이 검증되었으니 전체 데이터로 본격적인 학습을 진행하겠습니다.\n",
     "작업 순서:\n",
     "전체 데이터 로드: 5게임 샘플이 아닌 df_raw 전체를 사용합니다.\n",
@@ -1071,15 +1072,27 @@
    "id": "d04f69c7",
    "metadata": {},
    "source": [
-    "메모리 절약버전전"
+    "# #  타겟 분류(Classifier) + 오차 보정(Regressor) 하이브리드 모델델  메모리 절약버전전"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b4ff020f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 타입 최적화 완료.\n",
+      "분류 모델(Classifier) 전체 학습 중... (Low Memory Mode)\n",
+      "회귀 모델(Regressor) 전체 학습 중... (Low Memory Mode)\n",
+      "모든 학습이 완료되었습니다!\n",
+      "모델 저장 완료.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import gc # 가비지 컬렉터\n",
@@ -1136,6 +1149,181 @@
     "    pickle.dump(final_reg, f)\n",
     "    \n",
     "print(\"모델 저장 완료.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2d040d4",
+   "metadata": {},
+   "source": [
+    "#  타겟 분류(Classifier) + 오차 보정(Regressor) 하이브리드 모델델 추론\n",
+    "테스트 데이터는 track1/open_track1/test/ 폴더 안에 개별 파일들로 나뉘어 있고, 각 파일의 마지막 행의 end_x, end_y가 비어 있습니다. 우리의 목표는 이 빈칸을 채우는 것입니다.\n",
+    "우리가 만든 모델은 \"다음 이벤트의 시작 위치\"를 예측하는데, 이는 곧 \"현재 이벤트의 도착 위치(End)\"와 같습니다(패스 도착점 = 받는 사람 시작점). 따라서 모델을 그대로 사용하면 됩니다.\n",
+    "아래 코드를 실행하여 예측을 수행하고 submission.csv 파일을 생성해 주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5a4359be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "테스트해야 할 에피소드 수: 2414\n",
+      "테스트 데이터 추론 시작...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2414/2414 [01:39<00:00, 24.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "제출 파일 생성 완료: my_soccer_submission.csv\n",
+      "  game_episode      end_x      end_y\n",
+      "0     153363_1  59.396680   9.136557\n",
+      "1     153363_2  21.568073  47.254975\n",
+      "2     153363_6  21.644114  63.007995\n",
+      "3     153363_7  40.337850   8.001315\n",
+      "4     153363_8  68.217120  15.187685\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# 1. 테스트 파일 목록 로드\n",
+    "test_meta = pd.read_csv(\"../open_track1/test.csv\")\n",
+    "submission = pd.read_csv(\"../open_track1/sample_submission.csv\")\n",
+    "\n",
+    "print(f\"테스트해야 할 에피소드 수: {len(test_meta)}\")\n",
+    "\n",
+    "# 2. 추론 함수\n",
+    "def predict_test_data(test_meta, clf, reg):\n",
+    "    results = []\n",
+    "    \n",
+    "    # 진행 상황 표시\n",
+    "    for idx, row in tqdm(test_meta.iterrows(), total=len(test_meta)):\n",
+    "        episode_id = row['game_episode']\n",
+    "        file_path = f\"../open_track1/{row['path']}\"\n",
+    "        \n",
+    "        # 개별 테스트 파일 로드\n",
+    "        try:\n",
+    "            ep_df = pd.read_csv(file_path)\n",
+    "        except FileNotFoundError:\n",
+    "            # 경로 문제 시 예외 처리 (상대 경로 조정)\n",
+    "            ep_df = pd.read_csv(file_path.replace('./', '../open_track1/'))\n",
+    "            \n",
+    "        ep_df = ep_df.sort_values('time_seconds').reset_index(drop=True)\n",
+    "        \n",
+    "        # --- Context 빌드 (마지막 행 직전까지) ---\n",
+    "        player_last_pos = {}\n",
+    "        \n",
+    "        # 전체 기록을 돌며 선수 위치 업데이트\n",
+    "        # (마지막 행은 예측 대상이므로, 그 전까지만 돌면서 기억을 쌓음)\n",
+    "        # 하지만 마지막 행의 'start_x' 정보도 '현재 공 잡은 사람' 정보로 써야 함.\n",
+    "        \n",
+    "        # 1. 마지막 행 제외하고 메모리 빌드\n",
+    "        # (속도를 위해 전체를 다 돌지 않고, 필요한 만큼만 돌려도 되지만 정확도를 위해 전체 스캔)\n",
+    "        for i in range(len(ep_df) - 1):\n",
+    "            curr = ep_df.iloc[i]\n",
+    "            player_last_pos[curr.player_id] = {\n",
+    "                'x': curr.start_x, 'y': curr.start_y, \n",
+    "                'team_id': curr.team_id, 'is_home': curr.is_home\n",
+    "            }\n",
+    "            \n",
+    "        # 2. 마지막 행 (예측 대상)\n",
+    "        last_row = ep_df.iloc[-1]\n",
+    "        \n",
+    "        # 마지막 행의 주체(holder) 정보 업데이트 (중요: 이 선수는 지금 공을 가지고 있음)\n",
+    "        # 단, 이 선수가 패스를 하는 거니까 타겟 후보에서는 빠져야 함.\n",
+    "        \n",
+    "        holder_id = last_row.player_id\n",
+    "        holder_pos = (last_row.start_x, last_row.start_y)\n",
+    "        holder_team = last_row.team_id\n",
+    "        is_home = last_row.is_home\n",
+    "        \n",
+    "        # --- 후보 생성 ---\n",
+    "        goal_x = 105 if is_home else 0\n",
+    "        goal_y = 34\n",
+    "        \n",
+    "        candidates = []\n",
+    "        \n",
+    "        # (1) 아군 (메모리에 있는 선수들 중 같은 팀 & 본인 제외)\n",
+    "        teammates = [pid for pid, info in player_last_pos.items() \n",
+    "                     if info['team_id'] == holder_team and pid != holder_id]\n",
+    "        \n",
+    "        for pid in teammates:\n",
+    "            info = player_last_pos[pid]\n",
+    "            candidates.append({'x': info['x'], 'y': info['y'], 'type': 'player'})\n",
+    "            \n",
+    "        # (2) 자신 (드리블)\n",
+    "        candidates.append({'x': holder_pos[0], 'y': holder_pos[1], 'type': 'self'})\n",
+    "        \n",
+    "        # (3) 골대 (슛)\n",
+    "        candidates.append({'x': goal_x, 'y': goal_y, 'type': 'goal'})\n",
+    "        \n",
+    "        # --- 예측 수행 ---\n",
+    "        pred_x, pred_y = holder_pos # Default: 제자리\n",
+    "        \n",
+    "        if candidates:\n",
+    "            cand_features = []\n",
+    "            for cand in candidates:\n",
+    "                dx = cand['x'] - holder_pos[0]\n",
+    "                dy = cand['y'] - holder_pos[1]\n",
+    "                dist = np.sqrt(dx**2 + dy**2)\n",
+    "                angle = np.arctan2(dy, dx)\n",
+    "                is_goal = 1 if cand['type'] == 'goal' else 0\n",
+    "                is_self = 1 if cand['type'] == 'self' else 0\n",
+    "                dist_to_goal = np.sqrt((cand['x'] - goal_x)**2 + (cand['y'] - goal_y)**2)\n",
+    "                \n",
+    "                cand_features.append([dist, angle, is_goal, is_self, dist_to_goal])\n",
+    "            \n",
+    "            # 1. 타겟 선정\n",
+    "            probs = clf.predict_proba(cand_features)[:, 1]\n",
+    "            best_idx = np.argmax(probs)\n",
+    "            best_cand = candidates[best_idx]\n",
+    "            best_feat = [cand_features[best_idx]]\n",
+    "            \n",
+    "            # 2. 오차 보정\n",
+    "            offset_pred = reg.predict(best_feat)[0]\n",
+    "            \n",
+    "            pred_x = best_cand['x'] + offset_pred[0]\n",
+    "            pred_y = best_cand['y'] + offset_pred[1]\n",
+    "            \n",
+    "        results.append({\n",
+    "            'game_episode': episode_id,\n",
+    "            'end_x': pred_x,\n",
+    "            'end_y': pred_y\n",
+    "        })\n",
+    "        \n",
+    "    return pd.DataFrame(results)\n",
+    "\n",
+    "print(\"테스트 데이터 추론 시작...\")\n",
+    "# final_clf, final_reg는 방금 학습한 모델 변수명입니다.\n",
+    "my_submission = predict_test_data(test_meta, final_clf, final_reg)\n",
+    "\n",
+    "# 저장\n",
+    "my_submission.to_csv(\"my_soccer_submission.csv\", index=False)\n",
+    "print(\"제출 파일 생성 완료: my_soccer_submission.csv\")\n",
+    "\n",
+    "# 샘플 확인\n",
+    "print(my_submission.head())"
    ]
   }
  ],
